--- a/CraxIT Project/Angular/AngularFrontEnd/src/app/register/register.component.html
+++ b/CraxIT Project/Angular/AngularFrontEnd/src/app/register/register.component.html
@@ -10,6 +10,8 @@
 
       <input type="text" name="email" placeholder="Email address" [(ngModel)]="email" />
 
+      <input type="text" name="userName" placeholder="User name" [(ngModel)]="userName" />
+
       <input type="password" name="password" placeholder="Password" [(ngModel)]="password" />
 
       <input type="password" name="repeatPassword" placeholder="Repeat password" [(ngModel)]="repeatPassword" />
