--- a/CraxIT Project/Angular/AngularFrontEnd/src/app/app.component.html
+++ b/CraxIT Project/Angular/AngularFrontEnd/src/app/app.component.html
@@ -5,8 +5,9 @@
 
   <nav class="navbar">
     <ul>
-      <li><a href="/login">Login</a></li>
-      <li><a href="/register">Register</a></li>
+      <li *ngIf="!loggedIn"><a href="/login">Login</a></li>
+      <li *ngIf="!loggedIn"><a href="/register">Register</a></li>
+      <li *ngIf="loggedIn"><a href="/" (click)="Logout()">Logout</a></li>
     </ul>
   </nav>
 </nav>
