Added full validation to register form

--- a/CraxIT Project/Angular/AngularFrontEnd/src/app/register/register.component.html
+++ b/CraxIT Project/Angular/AngularFrontEnd/src/app/register/register.component.html
@@ -28,6 +28,9 @@
 
 
       <input type="submit" value="Register" style="margin-bottom:2vh" />
+
+      <div #errormessage style="width: 100%; min-height:5vh; margin-bottom:2vh; color:white;border: 1px solid red; background: #FF7F7F">
+      </div>
     </div>
   </form>
 
