--- a/Angular/src/app/houses/houses.component.html
+++ b/Angular/src/app/houses/houses.component.html
@@ -1,10 +1,10 @@
 <div *ngIf="_router.url == '/'">
 
 
-    <h1 #h1 style="text-align: center; margin-top:5vh">Please <a href="/register">register</a> or <a href="/login">login</a> to access this page.</h1>
+    <h1 #header *ngIf="!app.loggedIn" style="text-align: center; margin-top:5vh">Please <a style="color:darkblue" (click)="app.Navigate('register')">register</a> or <a style="color:darkblue" (click)="app.Navigate('login')">login</a> to access this page.</h1>
 
 
-    <table #houseTable>
+    <table #houseTable *ngIf="app.loggedIn">
       <button (click)="createHouse()" style="margin:auto">Create New</button>
       <br />
       <br />
